Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,12 @@ body {
     color: var(--primary-color);
 }
 
+@media only screen and (max-width: 950px) {
+    body {
+        overflow: auto !important;
+    }
+}
+
 .mobile-menu {
     width: 100vw;
     height: 100%;
